--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-source-filesystem": "^1.4.3",
     "gatsby-transformer-remark": "^1.7.1",
     "gatsby-transformer-sharp": "^1.6.1",
+    "grid-styled": "^2.0.0-11",
     "lodash": "^4.15.0",
     "react-text-loop": "^1.1.0",
     "styled-components": "^2.3.0"
