--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby": "^1.8.12",
     "gatsby-image": "^1.0.31",
     "gatsby-link": "^1.6.8",
+    "gatsby-plugin-favicon": "^2.1.1",
     "gatsby-plugin-google-analytics": "^1.0.4",
     "gatsby-plugin-manifest": "^1.0.4",
     "gatsby-plugin-offline": "^1.0.4",
